--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon app.js &> dev.log &",
+    "start": "node app.js &> start.log &"
   },
   "repository": {
     "type": "git",
