--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
   "bugs": {
     "url": "https://github.com/611h/magic-mood-book/issues"
   },
-  "homepage": "https://github.com/611h/magic-mood-book#readme"
+  "homepage": "https://github.com/611h/magic-mood-book#readme",
+  "type": "module"
 }
