--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "main": "app.js",
   "devDependencies": {
+    "@types/koa-router": "^7.4.8",
     "nodemon": "^3.1.10"
   },
   "scripts": {
